added basic page

--- a/src/styles/mainstyles.css
+++ b/src/styles/mainstyles.css
@@ -1,9 +1,15 @@
 .main-section {
-  padding: 2rem; /* Equal to the font-size of the root element */
+  padding: 2rem 3rem; /* Equal to the font-size of the root element */
 }
 
 .header-class {
   padding: 3rem; /* Consistent with main-section */
+}
+
+.content-container {
+  max-width: 700px; /* or 43.75rem if 1rem = 16px */
+  margin: 0 auto; /* Centers the box */
+  padding: 20px; /* Optional: Adds some space inside the container */
 }
 
 
@@ -183,24 +189,7 @@ figcaption {
   position: relative;
 }
 
-._12-collumn-grid {
-  width: 100%;
-  grid-column-gap: 1rem;
-  grid-row-gap: 1rem;
-  grid-template: ". Area"
-  / 5fr 2.75fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-auto-columns: 1fr;
-  display: grid;
-}
 
-._12-collumn-grid.large-gap {
-  grid-row-gap: 5rem;
-}
-
-._12-collumn-grid.hero {
-  grid-column-gap: 1rem;
-  grid-row-gap: 5rem;
-}
 
 .nav-menu-desktop {
   grid-column-gap: .5rem;
@@ -1482,458 +1471,4 @@ figcaption {
     grid-row-gap: 4rem;
   }
 }
-
-#w-node-d732dcf2-d7e5-b1e9-65ca-da57d0268fe7-cadb94c1 {
-  grid-area: 1 / 4 / 2 / 13;
-}
-
-#w-node-_4dc2a31b-a5f6-8a36-d01b-5213ee1efa0c-cadb94c1 {
-  grid-area: 2 / 1 / 3 / 13;
-}
-
-#w-node-_45d36ce9-de48-b4ad-4318-0e90dc09c45a-cadb94c1 {
-  grid-area: 1 / 1 / 2 / 3;
-  align-self: end;
-}
-
-#w-node-_5b22814e-1ce3-1b24-df20-abf2bf48b08d-cadb94c1 {
-  grid-area: 1 / 4 / 2 / 13;
-}
-
-#w-node-_08f0546f-697e-6c30-3539-a1218c3aef7c-cadb94c1 {
-  grid-area: 2 / 4 / 3 / 7;
-}
-
-#w-node-f886d313-702c-e063-b2e6-ee9f86d66334-cadb94c1 {
-  grid-area: 2 / 7 / 3 / 10;
-}
-
-#w-node-_2ece5f50-c22f-1c68-0e4d-38e9e604bd04-cadb94c1 {
-  grid-area: 2 / 10 / 3 / 13;
-}
-
-#w-node-_6312c7ad-954b-e025-62df-7c0b67d3af4c-cadb94c1 {
-  grid-area: span 1 / span 1 / span 1 / span 1;
-}
-
-#w-node-_4532ce50-7831-bdd2-4f53-6e547de14187-cadb94c1 {
-  grid-area: 1 / 3 / 2 / 4;
-  align-self: center;
-}
-
-#w-node-f36e7246-af66-e41b-fbdd-31580e753257-cadb94c1 {
-  grid-area: 2 / 8 / 3 / 13;
-}
-
-#w-node-_1d2237bb-b960-1a41-d073-bd3cd64af779-cadb94c1 {
-  grid-area: 1 / 4 / 2 / 7;
-}
-
-#w-node-a086734d-15d0-7bad-9c6e-260f1b12ee73-cadb94c1, #w-node-_205c5316-208a-e027-536c-e97ca98a15c2-cadb94c1 {
-  grid-area: 2 / 4 / 3 / 7;
-}
-
-#w-node-bfade3d1-b765-aa1a-9eb2-0974ed773e30-cadb94c1 {
-  grid-area: 3 / 3 / 4 / 13;
-}
-
-#w-node-ddb7f4c5-c298-ec99-1427-eabd9474a854-cadb94c1 {
-  grid-area: 1 / 3 / 2 / 4;
-  align-self: center;
-}
-
-#w-node-ddb7f4c5-c298-ec99-1427-eabd9474a856-cadb94c1 {
-  grid-area: 2 / 8 / 3 / 13;
-}
-
-#w-node-ddb7f4c5-c298-ec99-1427-eabd9474a858-cadb94c1 {
-  grid-area: 1 / 4 / 2 / 7;
-}
-
-#w-node-ddb7f4c5-c298-ec99-1427-eabd9474a85a-cadb94c1, #w-node-ddb7f4c5-c298-ec99-1427-eabd9474a85c-cadb94c1 {
-  grid-area: 2 / 4 / 3 / 7;
-}
-
-#w-node-ddb7f4c5-c298-ec99-1427-eabd9474a85d-cadb94c1 {
-  grid-area: 3 / 3 / 4 / 13;
-}
-
-#w-node-cdd07fc8-3dac-6509-6b40-d5b2535dd2cf-cadb94c1 {
-  grid-area: 1 / 3 / 2 / 4;
-  align-self: center;
-}
-
-#w-node-cdd07fc8-3dac-6509-6b40-d5b2535dd2d1-cadb94c1 {
-  grid-area: 2 / 8 / 3 / 13;
-}
-
-#w-node-cdd07fc8-3dac-6509-6b40-d5b2535dd2d3-cadb94c1 {
-  grid-area: 1 / 4 / 2 / 7;
-}
-
-#w-node-cdd07fc8-3dac-6509-6b40-d5b2535dd2d5-cadb94c1, #w-node-cdd07fc8-3dac-6509-6b40-d5b2535dd2d7-cadb94c1 {
-  grid-area: 2 / 4 / 3 / 7;
-}
-
-#w-node-_9e877598-1fb8-2a50-c8c5-f25b6e371437-6e371434 {
-  grid-area: 1 / 1 / 2 / 9;
-}
-
-#w-node-_9e877598-1fb8-2a50-c8c5-f25b6e371439-6e371434 {
-  grid-area: 2 / 1 / 3 / 5;
-}
-
-#w-node-_9e877598-1fb8-2a50-c8c5-f25b6e371443-6e371434 {
-  grid-area: 2 / 5 / 3 / 9;
-}
-
-#w-node-_9e877598-1fb8-2a50-c8c5-f25b6e37144d-6e371434 {
-  grid-area: 1 / 11 / 3 / 13;
-  align-self: end;
-  justify-self: start;
-}
-
-#w-node-_020c686e-0df3-0329-d2ae-ecbdba5a1423-6e371434 {
-  grid-area: span 1 / span 1 / span 1 / span 1;
-}
-
-#w-node-_9e877598-1fb8-2a50-c8c5-f25b6e37145b-6e371434 {
-  grid-area: 1 / 6 / 2 / 13;
-  justify-self: end;
-}
-
-#w-node-c1e3da35-a6f0-9b8c-c582-2b415d70056a-5d700567 {
-  grid-area: 1 / 1 / 2 / 4;
-  align-self: center;
-}
-
-#w-node-c1e3da35-a6f0-9b8c-c582-2b415d70056c-5d700567 {
-  grid-area: 1 / 4 / 2 / 13;
-}
-
-#w-node-f708acb8-0990-6ece-f8cf-1eae7c3b9974-5d700567 {
-  grid-area: 1 / 10 / 2 / 13;
-  justify-self: end;
-}
-
-#w-node-c1e3da35-a6f0-9b8c-c582-2b415d700579-5d700567, #w-node-c1e3da35-a6f0-9b8c-c582-2b415d70057f-5d700567 {
-  grid-area: 1 / 1 / 2 / 13;
-}
-
-#w-node-_866da9cf-aa5d-a8a0-9b12-43a1e1b445a7-cadb94cc {
-  grid-area: 1 / 1 / 2 / 5;
-  align-self: end;
-}
-
-#w-node-_866da9cf-aa5d-a8a0-9b12-43a1e1b445ad-cadb94cc {
-  grid-area: span 1 / span 1 / span 1 / span 1;
-}
-
-#w-node-_866da9cf-aa5d-a8a0-9b12-43a1e1b445af-cadb94cc {
-  grid-area: 1 / 2 / 2 / 4;
-}
-
-#w-node-_866da9cf-aa5d-a8a0-9b12-43a1e1b445b1-cadb94cc {
-  grid-area: span 1 / span 1 / span 1 / span 1;
-}
-
-#w-node-_866da9cf-aa5d-a8a0-9b12-43a1e1b445b3-cadb94cc {
-  grid-area: 1 / 2 / 2 / 4;
-}
-
-#w-node-_866da9cf-aa5d-a8a0-9b12-43a1e1b445b5-cadb94cc {
-  grid-area: span 1 / span 1 / span 1 / span 1;
-}
-
-#w-node-_866da9cf-aa5d-a8a0-9b12-43a1e1b445b7-cadb94cc {
-  grid-area: 1 / 2 / 2 / 4;
-}
-
-#w-node-_866da9cf-aa5d-a8a0-9b12-43a1e1b445b8-cadb94cc {
-  grid-area: 1 / 6 / 2 / 13;
-}
-
-@media screen and (max-width: 991px) {
-  #w-node-d732dcf2-d7e5-b1e9-65ca-da57d0268fe7-cadb94c1 {
-    grid-column: 3 / 7;
-  }
-
-  #w-node-_4dc2a31b-a5f6-8a36-d01b-5213ee1efa0c-cadb94c1 {
-    grid-column: 1 / 7;
-  }
-
-  #w-node-_5b22814e-1ce3-1b24-df20-abf2bf48b08d-cadb94c1 {
-    grid-column-start: 1;
-  }
-
-  #w-node-_08f0546f-697e-6c30-3539-a1218c3aef7c-cadb94c1 {
-    grid-column: 1 / 5;
-  }
-
-  #w-node-f886d313-702c-e063-b2e6-ee9f86d66334-cadb94c1 {
-    grid-column: 5 / 9;
-  }
-
-  #w-node-_2ece5f50-c22f-1c68-0e4d-38e9e604bd04-cadb94c1 {
-    grid-column: 9 / 13;
-  }
-
-  #w-node-_4532ce50-7831-bdd2-4f53-6e547de14187-cadb94c1 {
-    grid-column: 2 / 3;
-  }
-
-  #w-node-f36e7246-af66-e41b-fbdd-31580e753257-cadb94c1 {
-    grid-column-start: 8;
-  }
-
-  #w-node-_1d2237bb-b960-1a41-d073-bd3cd64af779-cadb94c1, #w-node-a086734d-15d0-7bad-9c6e-260f1b12ee73-cadb94c1 {
-    grid-column: 3 / 7;
-  }
-
-  #w-node-bfade3d1-b765-aa1a-9eb2-0974ed773e30-cadb94c1 {
-    grid-column-start: 2;
-  }
-
-  #w-node-ddb7f4c5-c298-ec99-1427-eabd9474a854-cadb94c1 {
-    grid-column: 2 / 3;
-  }
-
-  #w-node-ddb7f4c5-c298-ec99-1427-eabd9474a856-cadb94c1 {
-    grid-column-start: 8;
-  }
-
-  #w-node-ddb7f4c5-c298-ec99-1427-eabd9474a858-cadb94c1, #w-node-ddb7f4c5-c298-ec99-1427-eabd9474a85a-cadb94c1 {
-    grid-column: 3 / 7;
-  }
-
-  #w-node-ddb7f4c5-c298-ec99-1427-eabd9474a85d-cadb94c1 {
-    grid-column-start: 2;
-  }
-
-  #w-node-cdd07fc8-3dac-6509-6b40-d5b2535dd2cf-cadb94c1 {
-    grid-column: 2 / 3;
-  }
-
-  #w-node-cdd07fc8-3dac-6509-6b40-d5b2535dd2d1-cadb94c1 {
-    grid-column-start: 8;
-  }
-
-  #w-node-cdd07fc8-3dac-6509-6b40-d5b2535dd2d3-cadb94c1, #w-node-cdd07fc8-3dac-6509-6b40-d5b2535dd2d5-cadb94c1 {
-    grid-column: 3 / 7;
-  }
-
-  #w-node-_9e877598-1fb8-2a50-c8c5-f25b6e371437-6e371434 {
-    grid-column-end: 7;
-  }
-
-  #w-node-_9e877598-1fb8-2a50-c8c5-f25b6e371439-6e371434 {
-    grid-column-end: 3;
-  }
-
-  #w-node-_9e877598-1fb8-2a50-c8c5-f25b6e371443-6e371434 {
-    grid-column: 4 / 5;
-  }
-
-  #w-node-_9e877598-1fb8-2a50-c8c5-f25b6e37144d-6e371434 {
-    grid-column: 5 / 7;
-    grid-row-start: 2;
-    justify-self: end;
-  }
-
-  #w-node-c1e3da35-a6f0-9b8c-c582-2b415d70056a-5d700567 {
-    grid-area: 1 / 1 / 2 / 3;
-    align-self: center;
-  }
-
-  #w-node-c1e3da35-a6f0-9b8c-c582-2b415d70056c-5d700567 {
-    grid-column: 3 / 7;
-  }
-
-  #w-node-f708acb8-0990-6ece-f8cf-1eae7c3b9974-5d700567 {
-    grid-column: 5 / 7;
-  }
-
-  #w-node-c1e3da35-a6f0-9b8c-c582-2b415d700579-5d700567, #w-node-c1e3da35-a6f0-9b8c-c582-2b415d70057f-5d700567 {
-    grid-area: 1 / 1 / 2 / 9;
-  }
-
-  #w-node-_866da9cf-aa5d-a8a0-9b12-43a1e1b445a7-cadb94cc {
-    grid-area: 2 / 1 / 3 / 13;
-    align-self: end;
-  }
-
-  #w-node-_866da9cf-aa5d-a8a0-9b12-43a1e1b445b8-cadb94cc {
-    grid-column-start: 1;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  #w-node-d732dcf2-d7e5-b1e9-65ca-da57d0268fe7-cadb94c1 {
-    grid-area: 1 / 1 / 2 / 5;
-  }
-
-  #w-node-_4dc2a31b-a5f6-8a36-d01b-5213ee1efa0c-cadb94c1 {
-    grid-row: 3 / 4;
-    grid-column-end: 5;
-  }
-
-  #w-node-_45d36ce9-de48-b4ad-4318-0e90dc09c45a-cadb94c1 {
-    grid-row: 2 / 3;
-    grid-column-end: 5;
-  }
-
-  #w-node-_5b22814e-1ce3-1b24-df20-abf2bf48b08d-cadb94c1 {
-    grid-column-end: 7;
-  }
-
-  #w-node-_08f0546f-697e-6c30-3539-a1218c3aef7c-cadb94c1 {
-    grid-column-end: 4;
-  }
-
-  #w-node-f886d313-702c-e063-b2e6-ee9f86d66334-cadb94c1 {
-    grid-column: 4 / 7;
-    grid-row-start: 2;
-  }
-
-  #w-node-_2ece5f50-c22f-1c68-0e4d-38e9e604bd04-cadb94c1 {
-    grid-area: 3 / 1 / 4 / 4;
-  }
-
-  #w-node-_4532ce50-7831-bdd2-4f53-6e547de14187-cadb94c1 {
-    grid-column: 1 / 5;
-    align-self: center;
-  }
-
-  #w-node-f36e7246-af66-e41b-fbdd-31580e753257-cadb94c1 {
-    grid-area: 4 / 1 / 5 / 5;
-  }
-
-  #w-node-_1d2237bb-b960-1a41-d073-bd3cd64af779-cadb94c1 {
-    grid-area: 2 / 1 / 3 / 5;
-  }
-
-  #w-node-a086734d-15d0-7bad-9c6e-260f1b12ee73-cadb94c1 {
-    grid-area: 3 / 1 / 4 / 5;
-  }
-
-  #w-node-bfade3d1-b765-aa1a-9eb2-0974ed773e30-cadb94c1 {
-    grid-area: 5 / 1 / 6 / 5;
-  }
-
-  #w-node-ddb7f4c5-c298-ec99-1427-eabd9474a854-cadb94c1 {
-    grid-column: 1 / 5;
-    align-self: center;
-  }
-
-  #w-node-ddb7f4c5-c298-ec99-1427-eabd9474a856-cadb94c1 {
-    grid-area: 4 / 1 / 5 / 5;
-  }
-
-  #w-node-ddb7f4c5-c298-ec99-1427-eabd9474a858-cadb94c1 {
-    grid-area: 2 / 1 / 3 / 5;
-  }
-
-  #w-node-ddb7f4c5-c298-ec99-1427-eabd9474a85a-cadb94c1 {
-    grid-area: 3 / 1 / 4 / 5;
-  }
-
-  #w-node-ddb7f4c5-c298-ec99-1427-eabd9474a85d-cadb94c1 {
-    grid-area: 5 / 1 / 6 / 5;
-  }
-
-  #w-node-cdd07fc8-3dac-6509-6b40-d5b2535dd2cf-cadb94c1 {
-    grid-column: 1 / 5;
-    align-self: center;
-  }
-
-  #w-node-cdd07fc8-3dac-6509-6b40-d5b2535dd2d1-cadb94c1 {
-    grid-area: 4 / 1 / 5 / 5;
-  }
-
-  #w-node-cdd07fc8-3dac-6509-6b40-d5b2535dd2d3-cadb94c1 {
-    grid-area: 2 / 1 / 3 / 5;
-  }
-
-  #w-node-cdd07fc8-3dac-6509-6b40-d5b2535dd2d5-cadb94c1 {
-    grid-area: 3 / 1 / 4 / 5;
-  }
-
-  #w-node-_9e877598-1fb8-2a50-c8c5-f25b6e371439-6e371434 {
-    grid-column-end: 4;
-  }
-
-  #w-node-_9e877598-1fb8-2a50-c8c5-f25b6e371443-6e371434 {
-    grid-column-end: 7;
-  }
-
-  #w-node-_9e877598-1fb8-2a50-c8c5-f25b6e37144d-6e371434 {
-    grid-row: 3 / 4;
-    grid-column-start: 1;
-    justify-self: start;
-  }
-
-  #w-node-_020c686e-0df3-0329-d2ae-ecbdba5a1423-6e371434 {
-    grid-area: 1 / 1 / 2 / 7;
-  }
-
-  #w-node-_9e877598-1fb8-2a50-c8c5-f25b6e37145b-6e371434 {
-    grid-column: 1 / 7;
-    justify-self: start;
-  }
-
-  #w-node-c1e3da35-a6f0-9b8c-c582-2b415d700579-5d700567 {
-    grid-column: 4 / 5;
-    justify-self: end;
-  }
-
-  #w-node-_866da9cf-aa5d-a8a0-9b12-43a1e1b445a7-cadb94cc {
-    grid-row: 2 / 3;
-    grid-column-end: 7;
-  }
-
-  #w-node-_866da9cf-aa5d-a8a0-9b12-43a1e1b445b8-cadb94cc {
-    grid-area: 1 / 1 / 2 / 7;
-  }
-}
-
-@media screen and (max-width: 479px) {
-  #w-node-_4dc2a31b-a5f6-8a36-d01b-5213ee1efa0c-cadb94c1 {
-    grid-row: 3 / 4;
-  }
-
-  #w-node-_45d36ce9-de48-b4ad-4318-0e90dc09c45a-cadb94c1 {
-    grid-row: 2 / 3;
-  }
-
-  #w-node-_5b22814e-1ce3-1b24-df20-abf2bf48b08d-cadb94c1, #w-node-_08f0546f-697e-6c30-3539-a1218c3aef7c-cadb94c1 {
-    grid-column-end: 5;
-  }
-
-  #w-node-f886d313-702c-e063-b2e6-ee9f86d66334-cadb94c1 {
-    grid-area: 3 / 1 / 4 / 5;
-  }
-
-  #w-node-_2ece5f50-c22f-1c68-0e4d-38e9e604bd04-cadb94c1 {
-    grid-row: 4 / 5;
-    grid-column-end: 5;
-  }
-
-  #w-node-_9e877598-1fb8-2a50-c8c5-f25b6e371439-6e371434 {
-    grid-column-end: 5;
-  }
-
-  #w-node-_9e877598-1fb8-2a50-c8c5-f25b6e371443-6e371434 {
-    grid-area: 3 / 1 / 4 / 5;
-  }
-
-  #w-node-_9e877598-1fb8-2a50-c8c5-f25b6e37144d-6e371434 {
-    grid-row: 4 / 5;
-    grid-column-end: 5;
-  }
-
-  #w-node-c1e3da35-a6f0-9b8c-c582-2b415d70056a-5d700567 {
-    grid-column-end: 3;
-  }
-}
-
 
